--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -24,6 +24,7 @@ nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: 0px 200px;
 }
 .nav-title{
     color: black;
@@ -41,4 +42,20 @@ nav li {
 nav a{
     text-decoration: none;
     color: #474747;
+}
+/* Header related style  */
+.Header{
+    background-color: #fff8f3;
+}
+.banner{
+    padding: 30px 30px 30px 150px;
+    display: flex;
+    align-items: center;
+}
+.banner .profile-picture{
+    height: 500px;
+    width: 400px;
+}
+.banner-content{
+    
 }
