--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -1,3 +1,4 @@
+/* Header section */
 /* common shared style */
 body{
     /* font-family: 'Josefin Sans', sans-serif;
@@ -18,6 +19,17 @@ body{
     font-size: 20px;
     font-weight: 700 ;
     padding: 15px 35px;
+}
+.section-title{
+    color: #181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+}
+.section-description{
+    color: #757575;
+    text-align: center;
+    font-size: 17px;
 }
 /* Nav related style */
 nav{
@@ -46,16 +58,42 @@ nav a{
 /* Header related style  */
 .Header{
     background-color: #fff8f3;
+    background-image: url('../images/header_bg.png');
+    background-repeat: no-repeat;
+    background-position: bottom right;
 }
 .banner{
-    padding: 30px 30px 30px 150px;
+    padding: 30px 30px 0px 150px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
 .banner .profile-picture{
     height: 500px;
     width: 400px;
 }
+.banner-gretting{
+    font-size: 45px;
+    color: #474747;
+    margin-bottom: 0px;
+}
+.banner-title{
+    font-size: 85px;
+    font-weight: 700;
+    margin-top: 5px;
+    margin-bottom: 20px;
+}
+.banner-discription{
+    margin: 30px 0px;
+}
 .banner-content{
-    
+    max-width: 500px;
+}
+/* main section */
+/* about section */
+.about{
+    padding: 131px;
+    border-radius: 10px;
+    background-color: #fff8f3;
+    margin: 130px 0;
 }
