--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -90,10 +90,21 @@ nav a{
     max-width: 500px;
 }
 /* main section */
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
 /* about section */
 .about{
     padding: 131px;
     border-radius: 10px;
     background-color: #fff8f3;
     margin: 130px 0;
+}
+.about-info-container{
+    display: flex;
+    justify-content: space-around;
+}
+.about-info{
+    text-align: center;
 }
