--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -94,6 +94,9 @@ main{
     max-width: 1140px;
     margin: 0 auto;
 }
+main section{
+    margin-top: 130px;
+}
 /* about section */
 .about{
     padding: 131px;
@@ -110,4 +113,25 @@ main{
 }
 #what-i-do{
     padding: 30px 150px;
+}
+.skill-container{
+    display: flex;
+    gap: 24px;
+}
+.skill{
+    padding: 30px;
+    border-radius: 5px;
+    background: #fff;
+    box-shadow: 0 6px 50px 0 rgba(0, 0, 0, 0.06);
+}
+.skill-des{
+    color: #757575;
+}
+.resume-container{
+
+}
+.res-cl-title{
+    color: #474747;
+    font-size: 30px;
+    font-weight: 700;
 }
