--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -128,10 +128,43 @@ main section{
     color: #757575;
 }
 .resume-container{
-
+    display: flex;
+    gap: 30px;
+}
+.resume-colom hr{
+    margin: 30px 0px;
 }
 .res-cl-title{
     color: #474747;
     font-size: 30px;
     font-weight: 700;
+}
+.res-cl-title{
+    color:  #474747;
+    font-size: 30px;
+    font-weight: 700;
+    margin-bottom: 30px;
+}
+.res-it-title{
+    color:  #474747;
+    font-size: 25px;
+    font-weight: 700;
+    margin-bottom: 8px;
+
+}
+.res-it-info{
+    color: var(--Dark-03, #757575);
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 20px;
+}
+.rides{
+    color: var(--Dark-03, #757575);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 28px;
+}
+.btn{
+    margin-top: 50px;
+    text-align: center;
 }
